--- a/src/main/resources/templates/admin/adduser.html
+++ b/src/main/resources/templates/admin/adduser.html
@@ -53,7 +53,7 @@
 
           <div class="form-group col-md-6">
             <label for="DOB">Date Of Birth*</label>
-            <input type="date" class="form-control" id="inputTextl4" placeholder="dd/mm/yyyy" required name="dob">
+            <input type="date" class="form-control" id="inputTextl4" placeholder="dd/mm/yyyy" name="dob" required>
           </div>
         </div>
 
@@ -90,10 +90,10 @@
         <!-- ============   correspondence address + Mobile number ============= -->
 
         <div class="form-row">
-          <div class="form-group col-md-6">
+          <!--<div class="form-group col-md-6">
             <label for="inputAddress">correspondence address</label>
             <input type="text" class="form-control" id="inputAddress" placeholder="Address here ...">
-          </div>
+          </div> -->
 
           <div class="form-group col-md-6">
             <label for="inputNum">Mobile number*</label>
@@ -107,13 +107,13 @@
         <div class="form-row">
           <div class="form-group col-md-4">
             <label for="inputNum">Alternate-Mobile number*</label>
-            <input type="tel" class="form-control" id="inputNum" placeholder="Mobile number" required>
-          </div>
+            <input type="tel" class="form-control" id="inputNum" placeholder="Mobile number" name="alternateMobile" required>
+          </div> 
 
-          <div class="form-group col-md-4">
+          <!--<div class="form-group col-md-4">
             <label for="inputNum">Telephone number*</label>
             <input type="tel" class="form-control" id="inputNum" placeholder="Mobile number" required>
-          </div>
+          </div>-->
 
           <div class="form-group col-md-4">
             <label for="inputAdhar">Aadhar-Card Number*</label>
@@ -125,11 +125,11 @@
           </div>
           <div class="form-group col-md-4">
             <label>Department Name*</label>
-            <input type="text" class="form-control" id="inputNum" placeholder="Department ID" required>
+            <input type="text" class="form-control" id="inputNum" placeholder="Department ID" name="deptId" required>
 
           </div>
           <div class="form-group col-md-4">
-            <label for="inputAdhar">Date Of Joining*</label>
+            <label for="DOJ">Date Of Joining*</label>
             <input type="date" class="form-control" name="doj" id="DOJ" required>
           </div>
         </div>
@@ -139,22 +139,22 @@
         <div class="form-row">
 
           <div class="form-group col-md-4">
-            <label for="inputPan">Designation*</label>
-            <select name="designation" class="form-control" required>
+            <label for="designation">User Type*</label>
+            <select name="designation" class="form-control" id="designation" required>
               <option value="select">Select</option>
               <option value="Student">Student</option>
-              <option value="Staff">Staff</option>
+              <option value="Staff">Faculty</option>
             </select>
           </div>
 
           <div class="form-group col-md-4">
-            <label for="inputPan">Roll Number*</label>
-            <input type="text" class="form-control" id="inputRoll" placeholder="Roll Number" required>
+            <label for="inputRoll">Roll Number*</label>
+            <input type="text" class="form-control" id="inputRoll" name="rollNum" placeholder="Roll Number" required>
           </div>
 
           <div class="form-group col-md-4">
             <label for="inputSem">Semester*</label>
-            <select name="Semester" class="form-control" required>
+            <select name="Semester" class="form-control" id="inputSem" required>
               <option value="select">Select</option>
               <option value="Student">1<sup>st</sup> Sem</option>
               <option value="Student">2<sup>nd</sup> Sem</option>
@@ -164,10 +164,8 @@
               <option value="Student">6<sup>th</sup> Sem</option>
               <option value="Student">7<sup>th</sup> Sem</option>
               <option value="Student">8<sup>th</sup> Sem</option>
-
             </select>
           </div>
-
         </div>
 
 
@@ -175,17 +173,17 @@
         <div class="form-row">
           <div class="form-group col-md-6">
             <label>Nationality*</label>
-            <input type="text" class="form-control" placeholder="Nationality" required>
+            <input type="text" class="form-control" name="nationality" placeholder="Nationality" required>
           </div>
 
           <div class="form-group col-md-6">
             <label for="">Religion*</label>
-            <input type="text" class="form-control" placeholder="Religion" required>
+            <input type="text" class="form-control" name="religion" placeholder="Religion" required>
           </div>
 
           <div class="form-group col-md-6">
             <label for="inputCategory">Category*</label>
-            <select name="Category" class="form-control" required>
+            <select name="category" class="form-control" required>
               <option value="GENERAL">Select Category</option>
               <option value="SC">SC</option>
               <option value="ST">ST</option>
@@ -198,12 +196,12 @@
 
           <div class="form-group col-md-6">
             <label for="">Caste*</label>
-            <input type="text" class="form-control" placeholder="Caste" required>
+            <input type="text" class="form-control" name="caste" placeholder="Caste" required>
           </div>
   
               <div class="form-group col-md-4">
-                <label for="blood-group">blood-group*</label>
-             <select name="blood-group" class="form-control" required>
+             <label for="blood-group">blood-group*</label>
+             <select name="blooGroup" class="form-control" required>
               <option value="blood-group">blood-group</option>
               <option>A Positive</option>
               <option>A Negative</option>
