--- a/src/main/resources/templates/staff/applyLeave.html
+++ b/src/main/resources/templates/staff/applyLeave.html
@@ -1,10 +1,147 @@
 <!DOCTYPE html>
-<html>
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
 <meta charset="ISO-8859-1">
-<title>Insert title here</title>
+<title>Apply Leave</title>
+
+ <link rel="stylesheet" th:href="@{/css/index.css}">
+  <link rel="stylesheet" th:href="@{/css/header.css}">
+  <!-- Latest compiled and minified CSS -->
+  <link th:href="@{https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css}" rel="stylesheet"
+    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+  <link rel="stylesheet" th:href="@{https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css}">
+  
+  <style>
+      .container{
+        /* border: black solid 2px; */
+        border-radius: 10px;
+        padding: 2%;
+        margin-top: 10%;
+        box-shadow: 0 10px 8px #888888;
+      }
+      .row-spacing{
+        margin-bottom: 45px;
+      }
+      .radio-button-container{
+        /* border: black solid 2px; */
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+        justify-content: space-around;
+      }
+    </style>
+
 </head>
 <body>
+<!-- =========================== Main =========================== -->
+    <div class="container">
+      <form>
+          <!-- =========================== start-date =========================== -->
 
+          <div class="row row-spacing">
+          <div class="col">
+            <label for="startDate">Start Date</label>
+          </div>
+          <div class="col">
+            <input class="datepicker" type="date" name="date" id="" >
+          </div>
+          <div class="col">
+              <div class="radio-button-container">
+                <label class="radio-inline">
+                  <input type="radio" name="s-leavetype" checked>FD
+                </label>
+                <label class="radio-inline">
+                  <input type="radio" name="s-leavetype">FDH
+                </label>
+                <label class="radio-inline">
+                  <input type="radio" name="s-leavetype">FDA
+                </label>
+              </div>
+          </div>
+          </div>
+          <!-- =========================== end-date =========================== -->
+
+          <div class="row row-spacing">
+            <div class="col">
+              <label for="endDate">End Date</label>
+            </div>
+            <div class="col">
+              <input type="date" name="date" id="">
+            </div>
+            <div class="col">
+              <div class="radio-button-container">
+                  <label class="radio-inline">
+                    <input type="radio" name="e-leavetype" checked>FD
+                  </label>
+                  <label class="radio-inline">
+                    <input type="radio" name="e-leavetype">FDH
+                  </label>
+                  <label class="radio-inline">
+                    <input type="radio" name="e-leavetype">FDA
+                  </label>
+                </div>
+            </div>
+          </div>
+          <!-- =========================== number-leave =========================== -->
+
+          <div class="row row-spacing">
+            <div class="col-6 col-md-4">
+                <label for="">Number of leave applied</label>
+            </div>
+            <div class="col-6 col-md-4">
+              <input type="number" name="" id="" style="width: 5em">
+             </div> 
+          </div>
+
+          <!-- =========================== leave-type =========================== -->
+          <div class="row row-spacing">
+            <div class="col-6 col-md-4">
+                <label for="">Leave Type</label>
+            </div>
+
+            <div class="col-6 col-md-4">
+              <div class="dropdown">
+                <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                  Type
+                </button>
+                <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                  <a class="dropdown-item" href="#">Action</a>
+                  <a class="dropdown-item" href="#">Another action</a>
+                  <a class="dropdown-item" href="#">Something else here</a>
+                </div>
+              </div>
+            </div> 
+
+
+            <div class="col-6 col-md-4">
+              <strong>Balance Leave</strong>
+              <table class="table table-bordered">
+                <thead class="thead-dark">
+                  <tr class="bg-info">
+                    <th scope="col">CL</th>
+                    <th scope="col">EL</th>
+                    <th scope="col">FL</th>
+                    <th scope="col">CCL</th>
+                  </tr>
+                </thead>
+                <tbody>
+                  <tr>
+                    <td>5</td>
+                    <td>5</td>
+                    <td>5</td>
+                    <td>5</td>
+                  </tr>
+                </tbody>
+
+              </table>
+             </div>
+          </div>
+
+          <button type="button" class="btn btn-info">Apply</button>
+      </form>
+      
+    </div>
+
+ <div id="scroll-footer" th:insert="footer.html :: footer"></div>
 </body>
 </html>
