--- a/src/main/resources/templates/admin/viewUsers.html
+++ b/src/main/resources/templates/admin/viewUsers.html
@@ -96,7 +96,7 @@
 <body>
 	<header th:insert="header.html :: nav"></header>
 
-	<main>
+	<main style="margin-top: 7%;">
 		<div class="container">
 		<div class="mt-10">
 		
