--- a/src/main/resources/templates/admin/adduser.html
+++ b/src/main/resources/templates/admin/adduser.html
@@ -140,14 +140,15 @@
 
           <div class="form-group col-md-4">
             <label for="designation">User Type*</label>
-            <select name="designation" class="form-control" id="designation" required>
+            <select name="role" class="form-control" id="designation" required>
               <option value="select">Select</option>
-              <option value="Student">Student</option>
-              <option value="Staff">Faculty</option>
+              <option value="ADMIN">Admin</option>
+              <option value="STAFF">Staff</option>
+              
             </select>
           </div>
 
-          <div class="form-group col-md-4">
+          <!-- <div class="form-group col-md-4">
             <label for="inputRoll">Roll Number*</label>
             <input type="text" class="form-control" id="inputRoll" name="rollNum" placeholder="Roll Number" required>
           </div>
@@ -166,7 +167,7 @@
               <option value="Student">8<sup>th</sup> Sem</option>
             </select>
           </div>
-        </div>
+        </div> -->
 
 
         <!-- ============   Nationality + Religion + Category + Caste + blood-group============= -->
