--- a/src/main/resources/templates/admin/editUser.html
+++ b/src/main/resources/templates/admin/editUser.html
@@ -55,7 +55,7 @@
     
           <div class="form-group col-md-6">
             <label for="DOB">Date Of Birth*</label>
-            <input type="date"class="form-control" id="inputTextl4" placeholder="dd/mm/yyyy" required>
+            <input type="date"class="form-control" id="inputTextl4" placeholder="dd/mm/yyyy" th:value="${user.dob}" required>
           </div>
         </div>
     
@@ -64,13 +64,9 @@
             <div class="form-row">
               <div class="form-group col-md-6">
                 <label for="inputEmail4">Email*</label>
-                <input type="email" class="form-control" id="inputEmail4" required>
+                <input type="email" class="form-control" id="inputEmail4" th:value="${user.email}" required>
               </div>
     
-              <div class="form-group col-md-6">
-                <label for="inputPassword4">Password*</label>
-                <input type="password" class="form-control" id="inputPassword4" required>
-              </div>
     
               <div class="form-group col-md-6">
                 <label for="inputGender4">Gender*</label>
