--- a/src/main/resources/templates/admin/adduser.html
+++ b/src/main/resources/templates/admin/adduser.html
@@ -125,8 +125,13 @@
           </div>
           <div class="form-group col-md-4">
             <label>Department Name*</label>
-            <input type="text" class="form-control" id="inputNum" placeholder="Department ID" name="deptId" required>
-
+            <select name="deptId" class="form-control" required>
+              <option value="">...</option>
+              <option value="1">Computer Engineering</option>
+              <option value="2">Civil Engineering</option>
+              <option value="3">Electrical Engineering</option>
+			  <option value="4">Mechanical Engineering</option>
+            </select>
           </div>
           <div class="form-group col-md-4">
             <label for="DOJ">Date Of Joining*</label>
